--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ uvicorn[standard]~=0.30.3
 alembic~=1.13.2
 asyncpg~=0.29.0
 sqlalchemy~=2.0.31
-psycopg2-binary
+#psycopg2-binary
 aiofiles
 aiohttp
+aioredis
 jinja2
 beautifulsoup4
 plotly
@@ -17,8 +18,7 @@ slowapi~=0.1.9
 sqladmin[full]==0.20.1
 requests~=2.32.3
 apscheduler~=3.10.4
-fastapi-cache2
-# fastapi-cache2[redis]
+fastapi-cache2[redis]
 
 Faker~=27.0.0
 
