--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Editor
+.vscode/
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -136,5 +140,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
-.idea/
