--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - .env
+      - .env:/src/PROJ/.env
     restart: unless-stopped
     depends_on:
       - pgsql
