--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ rich~=13.7.1
 pytest~=8.3.1
 pytest_asyncio
 slowapi~=0.1.9
-sqladmin[full]==0.20.1
+sqladmin[full]~=0.20
 requests~=2.32
 apscheduler~=3.10
 fastapi-cache2[redis]
@@ -27,7 +27,6 @@ Faker~=27.0.0
 python-jose[cryptography]
 pyjwt~=2.8.0
 orjson~=3.10
-starlette~=0.40
 pydantic~=2.8.2
 colorama~=0.4.6
 python-dotenv~=1.0.1
